Fixed random hits by decade, added Native react icon, better responsiveness in SongList.js on mobile

--- a/frontend/src/global.css
+++ b/frontend/src/global.css
@@ -656,3 +656,12 @@ textarea {
   background-color: #ecf0f1; /* Light background to make it stand out */
 }
 
+@media (max-width: 768px) {
+  .ant-table {
+    font-size: 14px; /* Adjust font size */
+  }
+  .ant-table-thead > tr > th,
+  .ant-table-tbody > tr > td {
+    padding: 8px; /* Adjust padding */
+  }
+}
